compiler/tools/fpp-to-dict/test/top/invalidDictDefConstant.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/invalidDictDefConstant.fpp:1.1
dictionary constant C = {
^
error: constant dictionary defintion must be a primitive type, string, or enum.
